fixed mobile UI stretch image issue

--- a/src/components/PageSection/pagesection.scss
+++ b/src/components/PageSection/pagesection.scss
@@ -61,6 +61,11 @@ $text-standard: 1em;
 
     width: 100%;
     display: flex;
+    img{
+
+    height: 80%;
+
+    }
   }
 
   .pagesection {
